@@ -52,8 +52,6 @@ public class TestMmapDirectory extends BaseDirectoryTestCase {
       assertTrue(
           "on Java 19 we should use MemorySegmentIndexInputProvider to create mmap IndexInputs",
           isMemorySegmentImpl());
-    } else if (runtimeVersion > 19) {
-      // TODO: We don't know how this is handled in later Java versions, so make no assumptions!
     } else {
       assertSame(MappedByteBufferIndexInputProvider.class, MMapDirectory.PROVIDER.getClass());
     }
